portal-app/ssl-portal-app/app-Frontend-kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: portal-app
spec:
  containers:
    - name: ubuntu
      image: ubunt
